test/compile_fail/effect_reader_context_removed.zig
const shift = @import("shift");

comptime {
    _ = shift.effect.reader.Context;
}
